# tmms

./: .gitignore  README.md  action.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tmms.py  tox.ini
.github/workflows/: Build.yml  main.yml  tests.yml
src/tmms/: __init__.py  tmms.py
tests/: credits.csv  test_argparse.py  test_check_api_key.py  test_extract.py  test_get_credits.py  test_get_id.py  test_get_ids.py  test_helpers.py  test_import_folder.py  test_lookup_id.py  test_lookuptab.py  test_main_args.py  test_tmms.py
tmms/: __init__.py  tmms.py
