[tool.poetry]
name = "tmms"
version = "0.1.0"
description = ""
authors = ["schuenemann <til.schuenemann@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"
pandas = "^1.4.3"
tqdm = "^4.64.0"
requests = "^2.28.1"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.961"
pytest-cov = "^3.0.0"
tox = "^3.25.1"
pytest = "^7.1.2"
pyproject-flake8 = "^0.0.1-alpha.4"

[tool.poetry.scripts]
tmms = "tmms.tmms:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = "True"
warn_return_any = "True"
warn_unused_configs = "True"
strict = "True"

[tool.flake8]
max-line-length = 100
max-complexity = 15
statistics = "True"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = false
envlist = pytest, pflake8, mypy

[testenv]
deps = pytest >= 7.0.0, <8
whitelist_externals = poetry
skip_install = true
commands =
    poetry install

[testenv:pytest]
deps = pytest >= 7.0.0, <8
skip_install = true
commands = 
    poetry install
    pytest tests

[testenv:pflake8]
deps = pyproject-flake8
skip_install = true
commands =
    pflake8 --version
    - pflake8 tmms

[testenv:mypy]
deps =
    mypy
skip_install = true
commands =
    mypy --version
    - mypy tmms

"""
