[metadata]
name = tmms
description = TMDB Movie Metadata Scraper
author = Til Schünemann
license = GNU-GPL3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    tmms
install_requires =
    pandas>=1
    numpy>=1
    tqdm>=4
    requests>=2
python_requires = >=3.10
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
tmms = py.typed

[flake8]
max-line-length = 80
statistics=True